# drako

./: Cargo.toml  LICENSE  README.md  drakoicon  install.sh  todo.txt
.github/workflows/: ci.yml  release.yml
src/: files.rs  init.rs  main.rs  messages.rs  utils.rs
tests/: comprehensive_test.rs  drako_tests.rs  flag_parsing_test.rs  test.rs  verbose_feature_tests.rs
