[package]
name = "drako"
version = "1.0.0"
edition = "2021"
authors = ["00msjr <michaelsousajr@gmail.com>"]
description = "A better mkdir command with project setup automation."
license = "MIT"
repository = "https://github.com/00msjr/drako"
readme = "README.md"
keywords = ["mkdir", "directory", "automation", "cli"]
categories = ["command-line-utilities"]
exclude = ["tests"]

[dependencies]

[dev-dependencies]
tempfile = "3.8.1"

[[bin]]
name = "drako"
path = "src/main.rs"
